--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddForum"></activity>
+        <activity android:name=".InnerForumActivity"></activity>
+        <activity android:name=".AddForum" />
         <activity android:name=".OuterForumActivity" />
         <activity android:name=".Profile" />
         <activity android:name=".SignActivity" />
