--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 05 18:23:45 EET 2020
-sdk.dir=/Users/halimekuvel/Library/Android/sdk
+#Fri Nov 20 22:44:51 EET 2020
+sdk.dir=C\:\\Users\\musty\\AppData\\Local\\Android\\Sdk
