--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-storage:19.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
 
