--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Profile"></activity>
-        <activity android:name=".InnerForumActivity"></activity>
-        <activity android:name=".MainScreen"></activity>
+        <activity android:name=".RecipeListActivity"></activity>
         <activity android:name=".Profile" />
         <activity android:name=".InnerForumActivity" />
+        <activity android:name=".MainScreen" />
         <activity android:name=".AddForum" />
         <activity android:name=".OuterForumActivity" />
-        <activity android:name=".Profile" />
         <activity android:name=".SignActivity" />
         <activity android:name=".ResetPassword" />
         <activity android:name=".LoginScreen" />
