--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,21 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
 
+    androidTestImplementation 'androidx.test:core:1.0.0'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.0.0'
+    androidTestImplementation 'androidx.test.ext:truth:1.0.0'
+    androidTestImplementation 'com.google.truth:truth:0.42'
+
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-accessibility:3.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-web:3.1.0'
+    androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.1.0'
+
+    androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
+
 
 }
 
