--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 05 15:42:26 EET 2020
-sdk.dir=C\:\\Users\\Emir\\AppData\\Local\\Android\\Sdk
+#Sun Dec 06 16:42:29 EET 2020
+sdk.dir=C\:\\Users\\Elif\\AppData\\Local\\Android\\Sdk
