forum tests added

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Dec 06 16:42:29 EET 2020
-sdk.dir=/Users/halimekuvel/Library/Android/sdk
+sdk.dir=C\:\\Users\\musty\\AppData\\Local\\Android\\Sdk
