--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecipeListActivity"></activity>
+        <activity android:name=".SearchAdapter"></activity>
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".RecipeListActivity" />
         <activity android:name=".Profile" />
         <activity android:name=".InnerForumActivity" />
         <activity android:name=".MainScreen" />
