--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 06 16:42:29 EET 2020
-sdk.dir=C\:\\Users\\musty\\AppData\\Local\\Android\\Sdk
+#Mon Dec 07 18:54:46 EET 2020
+sdk.dir=/home/saliha/Android/Sdk
