--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
 
+
     defaultConfig {
         applicationId "com.example.nefizzo"
         minSdkVersion 19
@@ -12,7 +13,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -67,7 +68,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
 
     androidTestImplementation 'org.testng:testng:6.9.6'
-
+    implementation 'androidx.multidex:multidex:2.0.1'
 
 }
 
