New home screen files added

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Dec 07 18:54:46 EET 2020
-sdk.dir=C:\\Users\\Elif\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Users\\Emir\\AppData\\Local\\Android\\sdk
