--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SearchAdapter"
-            tools:ignore="Instantiatable"></activity>
+        <activity android:name=".HomeScreen"></activity>
+        <activity
+            android:name=".SearchAdapter"
+            tools:ignore="Instantiatable" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".RecipeListActivity" />
         <activity android:name=".Profile" />
