--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 07 18:54:46 EET 2020
-sdk.dir=C:\\Users\\Emir\\AppData\\Local\\Android\\sdk
+#Thu Dec 31 23:24:50 EET 2020
+sdk.dir=C\:\\Users\\musty\\AppData\\Local\\Android\\Sdk
