--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Dec 31 23:24:50 EET 2020
-sdk.dir=C\:\\Users\\Emir\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/halimekuvel/Library/Android/sdk
